// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`vue/UITooltip > renders correctly - basic 1`] = `
<div
  aria-label="Test"
  class="ui-tooltip"
  role="tooltip"
>
  
  
  <!--v-if-->
</div>
`;

exports[`vue/UITooltip > renders correctly - with description 1`] = `
<div
  aria-label="Test"
  class="ui-tooltip ui-tooltip--top--described"
  role="tooltip"
>
  
  <button>
    i
  </button>
  
  <span
    class="ui-tooltip__description"
    role="status"
  >
    More details
  </span>
</div>
`;

exports[`vue/UITooltip > renders correctly - with description 2`] = `
<div
  aria-label="Test"
  class="ui-tooltip ui-tooltip--top"
  role="tooltip"
>
  
  <button>
    i
  </button>
  
  <!--v-if-->
</div>
`;

exports[`vue/UITooltip > renders correctly - with modifiers 1`] = `
<div
  aria-label="Test"
  class="ui-tooltip ui-tooltip--top"
  role="tooltip"
>
  
  
  <!--v-if-->
</div>
`;
